[gd_scene load_steps=19 format=2]

[ext_resource path="res://Src/Interface/Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Src/Interface/Menus/Sprite.gd" type="Script" id=2]
[ext_resource path="res://Assets/text/MainMenuButtons.tres" type="DynamicFont" id=3]
[ext_resource path="res://Src/Interface/Menus/Fire.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Texture/basement_menu_collapsed - Copy(1).png" type="Texture" id=5]
[ext_resource path="res://Assets/Sound/OST/Main MenuOST .ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Texture/menu_normal.png" type="Texture" id=7]
[ext_resource path="res://Assets/Texture/TItle Text.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/trash_bin_front.png" type="Texture" id=9]
[ext_resource path="res://Src/Interface/Menus/VBoxContainer.gd" type="Script" id=10]
[ext_resource path="res://Src/Interface/Menus/trash_bin.gd" type="Script" id=11]
[ext_resource path="res://Src/Interface/Menus/TextureRect2.gd" type="Script" id=12]
[ext_resource path="res://Assets/Sprites/trash_bin_back.png" type="Texture" id=13]
[ext_resource path="res://Src/Interface/Menus/Button.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=2]
length = 2.0

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../TextureRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../VBoxContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../trash_front:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../trashback:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 544 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
normal_map = ExtResource( 7 )
script = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1893.0
margin_bottom = 1008.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )
stretch_mode = 5
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.467
anchor_right = 0.6
anchor_bottom = 0.919
margin_top = -4.36002
margin_bottom = 7.47998
custom_constants/separation = 40
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" parent="VBoxContainer" instance=ExtResource( 14 )]
margin_bottom = 95.0

[node name="Load" type="Button" parent="VBoxContainer"]
margin_top = 135.0
margin_right = 384.0
margin_bottom = 230.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Load"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -1.0
margin_right = 4.00012
margin_bottom = 4.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.67451, 0.839216, 0.262745, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Load"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 270.0
margin_right = 384.0
margin_bottom = 365.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -1.0
margin_right = 4.00012
margin_bottom = 4.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.67451, 0.839216, 0.262745, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 405.0
margin_right = 384.0
margin_bottom = 500.0
rect_min_size = Vector2( 360, 60 )
size_flags_vertical = 3
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.67451, 0.839216, 0.262745, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Quit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Enter Window"
"anims/Enter Window" = SubResource( 2 )

[node name="trashback" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 536, 960 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="Fire" parent="." instance=ExtResource( 4 )]
position = Vector2( 536, 888 )
scale = Vector2( 0.6, 0.6 )

[node name="trash_front" type="Sprite" parent="."]
position = Vector2( 536, 960 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
script = ExtResource( 11 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="FadeIN" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIN"]
autoplay = "fade_in"
anims/fade_in = SubResource( 4 )
anims/fade_out = SubResource( 5 )
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
